edits to rplots file

--- a/cleaning_and_analysis/gee_tables.html
+++ b/cleaning_and_analysis/gee_tables.html
@@ -1812,7 +1812,7 @@ border-radius: 0px;
 <h1>Read Data</h1>
 <pre class="r"><code>#scalars &lt;- read_csv(&quot;~/Desktop/scalars_trim.csv&quot;)
 
-## load raw trajectory data
+## load scalar features data
 scalars = readRDS(here::here(&quot;data&quot;, &quot;scalar_metrics_pupils.rds&quot;))
 
 # Potentially add this to scalar features document
