--- a/cleaning_and_analysis/gee_tables.html
+++ b/cleaning_and_analysis/gee_tables.html
@@ -1932,8 +1932,8 @@ non_daily_dif = daily_dif - non_dif
 ## Occ vs Daily
 occ_daily_dif =  daily_dif -occ_dif </code></pre>
 </div>
-<div id="functions-for-estimates-and-p-values-of-difference-of-differecences-using-contrast-statements" class="section level1">
-<h1>Functions for estimates and p-values of difference of differecences
+<div id="functions-for-estimates-and-p-values-of-difference-of-differences-using-contrast-statements" class="section level1">
+<h1>Functions for estimates and p-values of difference of differences
 using contrast statements</h1>
 <pre class="r"><code>### Function for pairwise difference of differences
 contrast_pair = function(gee_model, contrast_statment, df, lower_tail = FALSE, log_p = FALSE){
@@ -2111,7 +2111,7 @@ mean_post_use_gen_auc = str_c(round(mean_post_use_gen_auc, 2),
 
 non_general_dif = (post_use_gen - pre_use_gen) - (post_non_gen - pre_non_gen) </code></pre>
 </div>
-<div id="functions-for-estimates-and-p-values-of-difference-of-differecences-using-contrast-statements-1" class="section level1">
+<div id="functions-for-estimates-and-p-values-of-difference-of-differecences-using-contrast-statements" class="section level1">
 <h1>Functions for estimates and p-values of difference of differecences
 using contrast statements</h1>
 <pre class="r"><code>### Function for pairwise difference of differences
